# jasp-desktop

./: .gitmodules  CMakeLists.txt  JASP.pri  JASP.pro  R_HOME.pri  R_INSTALL_CMDS.pri  conanfile.txt  jasp_nl.po
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
Common/: CMakeLists.txt  Common.pro  appinfo.cpp.in  appinfo.h  column.cpp  column.h  columns.cpp  columns.h  columntype.h  dataset.cpp  dataset.h  dirs.cpp  enginedefinitions.h  ipcchannel.cpp  ipcchannel.h  label.cpp  label.h  labels.cpp  labels.h  log.cpp  log.h  sharedmemory.cpp  sharedmemory.h  stringutils.h  tempfiles.cpp  timers.cpp  utils.cpp  utils.h
CommonData/: CMakeLists.txt  column.cpp  column.h  columnutils.cpp  columnutils.h  databaseinterface.cpp  databaseinterface.h  dataset.cpp  dataset.h  datasetbasenode.cpp  datasetbasenode.h  emptyvalues.cpp  emptyvalues.h  filter.cpp  filter.h  internalDbDefinition.sql  jsonutilities.cpp  label.cpp  label.h
Desktop/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Desktop/analysis/: analyses.cpp  analysis.cpp  analysis.h  analysisform.cpp  boundcontrolbase.cpp  jaspcontrol.h
Desktop/data/: asyncloader.cpp  columnmodel.cpp  columnmodel.h  columnsmodel.cpp  computedcolumnsmodel.cpp  datasetpackage.cpp  datasetpackage.h  datasetpackageenums.h  datasetpackagesubnodemodel.cpp  datasetpackagesubnodemodel.h  datasettablemodel.cpp  datasettableproxy.cpp  datasettableproxy.h  expanddataproxymodel.cpp  filtermodel.cpp  filtermodel.h  labelfiltergenerator.cpp  labelmodel.cpp  labelmodel.h  undostack.cpp  undostack.h
Desktop/engine/: enginerepresentation.cpp  enginerepresentation.h  enginesync.cpp  enginesync.h
Desktop/modules/: dynamicmodule.cpp  dynamicmodule.h  (+5 more)
Engine/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  rbridge.cpp  rbridge.h
JASP-Common/: JASP-Common.pro  column.cpp  column.h  columns.cpp  columntype.h  dataset.cpp  dataset.h  dirs.cpp  ipcchannel.cpp  log.cpp  tempfiles.cpp
JASP-Desktop/: JASP-Desktop.pro  mainwindow.cpp  mainwindow.h  qml.qrc
JASP-Engine/: JASP-Engine.pro  engine.cpp  engine.h  main.cpp  otoolstuff.cpp  rbridge.cpp  rbridge.h
JASP-R-Interface/: JASP-R-Interface.pro  jasprcpp.cpp  jasprcpp.h  jasprcpp_interface.h
Modules/: InstallModule.pri  Modules.pro  getModuleDependencies.R  install-RInside.R.in  install-jaspBase.R.in  install-jaspModuleInstaller.R.in  install-module.R.in  setup_renv_rcpp_rinside_jaspModuleInstaller.R.in
QMLComponents/: .gitignore  analysisbase.cpp  analysisbase.h  analysisform.h  knownissues.cpp
R-Interface/: CMakeLists.txt  jasprcpp.cpp  jasprcpp.h  jasprcpp_interface.h
Tools/: autobuild.cmd  setup_renv_rcpp_rinside_jaspModuleInstaller.R.in
(+281 files in other folders)
